Fix header flickering

--- a/styles/header.module.less
+++ b/styles/header.module.less
@@ -15,12 +15,15 @@
     height: 60px;
     li:first-child {
       flex-grow: 1;
+      width: calc(100% - 80px);
     }
     li:nth-child(2) {
-      width: 48px;
+      padding-left: 0 !important;
+      width: 28px;
     }
     li:nth-child(3) {
-      width: 56px;
+      width: 50px;
+      vertical-align: 1px !important;
     }
   }
 }
@@ -49,13 +52,16 @@
 }
 
 .search, .navigation {
-  display: flex !important;
+  display: inline-flex !important;
   align-items: center !important;
   user-select: none;
+  vertical-align: inherit !important;
+  height: 60px !important;
 }
 
 .navigation {
   padding-left: 8px !important;
+  padding-right: 12px !important;
 }
 
 .navigation::after, .search::after {
